# 2dC2P

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  MyCrossPlatformApp  README.md  cmake_install.cmake  ico.rc  ico.res  main
glad/: Makefile
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Ball.hpp  Entity.hpp  Math.hpp  RenderWindow.hpp  Vector.hpp  renderWindow.hpp  render_window.hpp  scene.hpp  sceneBasic.hpp  scenes.hpp  tools.hpp
lib/cmake/SDL2/: sdl2-config.cmake
lib/cmake/SDL2_image/: sdl2_image-config.cmake
src/: Vector.cpp  ball.cpp  ballScene.cpp  ballSimScene.cpp  entity.cpp  main.cpp  renderWindow.cpp  render_window.cpp  renderwindow.cpp  scene.cpp  scenes.cpp  tools.cpp
